--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Avabodh Foundation</title>
-  <meta name="description" content="Avabodh Foundation: street education, school admissions, Mind Map Café and documentaries that tell real stories." />
+  <meta name="description" content="Avabodh Foundation: street education, school admissions, Mind Park Café and documentaries that tell real stories." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Merriweather:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
   <!-- NAV -->
-  <header class="top" role="banner">
+  <header class="top" role="banner" style="background-color: #ff5e00;">
     <div class="nav-inner">
       <div class="brand">
-        <div class="logo" aria-hidden="true">A</div>
+        <div class="logo" aria-hidden="true"><img src="./asesst/avabodh Foundation.jpg"></div>
         <div>
           <div style="font-weight:700">Avabodh Foundation</div>
-          <div style="font-size:12px;color:var(--muted)">Educating · Empowering · Including</div>
+          <div style="font-size:12px;color:var(--muted)">Educating · Empowering</div>
         </div>
       </div>
 
       <nav class="nav-links" role="navigation" aria-label="Main navigation">
         <a href="#about">About</a>
         <a href="#work">Our Work</a>
-        <a href="#documentaries">Documentaries</a>
+        <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
         <a class="cta-donate" href="#donate">Donate</a>
       </nav>
@@ -39,8 +39,8 @@
     <section class="hero" aria-label="Intro">
       <div class="hero-inner wrap">
         <div class="hero-left">
-          <h1>Educating Street Children — Ending Poverty</h1>
-          <p class="lead">At Avabodh Foundation we bring learning where children live. Through small street-classes, school support, and community hubs like the Mind Map Café, we help children find a path out of poverty.</p>
+          <h1>Educating Street Children - Ending Poverty</h1>
+          <p class="lead">AVABODH Foundation aims to be a bridge between corporates, NGOs and colleges and help them to drive impactful CSR initiatives through effective collaboration. We will be the catalyst to connect corporates with the right NGOs and drive on-the-field social events involving volunteers through the social change internships from partner colleges.</p>
 
           <div class="hero-ctas">
             <button class="btn btn-primary" id="donateBtn">Donate Now</button>
@@ -50,23 +50,26 @@
           <div class="hero-stats" aria-hidden="true">
             <div class="stat"><div class="val">500+</div><div class="lbl">Children reached</div></div>
             <div class="stat"><div class="val">80+</div><div class="lbl">Admitted to school</div></div>
-            <div class="stat"><div class="val">10</div><div class="lbl">Documentaries</div></div>
+            <div class="stat"><div class="val">10+</div><div class="lbl">Awareness Campaign</div></div>
           </div>
 
         </div>
 
         <div class="hero-right" aria-hidden="true">
           <!-- replace src with your hero image -->
-          <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=1600&auto=format&fit=crop" alt="Volunteers teaching children outdoors">
+          <img src="./asesst/documentary.jpeg" alt="Volunteers teaching children outdoors">
           <div class="overlay">
             <div>
-              <div style="font-weight:700">Mind Map Café — New Initiative</div>
+              <div style="font-weight:700">Mind Park Cafe - New Initiative</div>
+              <div style="font-weight:700; color: rgb(0, 78, 64);">Comming Soon</div>
               <div style="font-size:13px;color:var(--muted)">Supporting mentally challenged members through activities and employment.</div>
             </div>
             <div>
+              <a href="https://www.youtube.com/@avabodhFoundation">
               <button class="play-btn" id="watchHero">
                 ▶ Watch clip <span> </span>
               </button>
+              </a>
             </div>
           </div>
         </div>
@@ -77,25 +80,25 @@
     <section id="about">
       <div class="wrap">
         <h2 class="section-title">About Avabodh Foundation</h2>
-        <p class="lead">We teach children in the places they live — street corners, markets, and community spaces. Our goal is to remove barriers that keep children out of school. We provide short lessons, assist families with enrollment, and follow-up support. We also create safe community spaces like the Mind Map Café for people with mental challenges.</p>
+        <p class="lead">Avabodh Foundation is a community-driven non-profit dedicated to empowering underprivileged children through accessible education, compassionate support, and organised volunteer efforts. We work to bridge the gap between deprivation and opportunity by creating safe learning spaces, offering mentorship, and guiding children toward formal schooling. With a mission to build an educated and responsible society, we believe in uplifting individuals so they can uplift others, creating a continuous cycle of growth, equality, and collective progress.</p>
 
         <div style="margin-top:22px;display:flex;gap:18px;flex-wrap:wrap">
           <div class="card" style="flex:1;min-width:220px">
             <div style="padding:14px">
               <div style="font-weight:700">Mission</div>
-              <p class="muted" style="margin-top:8px">Provide basic education and pathways to formal schooling for street children across our community.</p>
+              <p class="muted" style="margin-top:8px">To provide basic education and pathways to formal schooling for street children by offering accessible learning spaces, supportive environments, and inspiring mentorship. We also aim to build a strong movement of organised volunteers dedicated to creating an educated and socially responsible community.</p>
             </div>
           </div>
           <div class="card" style="flex:1;min-width:220px">
             <div style="padding:14px">
               <div style="font-weight:700">Vision</div>
-              <p class="muted" style="margin-top:8px">A world where every child has access to education and a chance to end the cycle of poverty.</p>
+              <p class="muted" style="margin-top:8px">To create a self-reliant and compassionate society where every individual is empowered with knowledge, responsibility, and equal opportunities, building a cycle of upliftment, inclusion, and sustainable growth.</p>
             </div>
           </div>
           <div class="card" style="flex:1;min-width:220px">
             <div style="padding:14px">
-              <div style="font-weight:700">Values</div>
-              <p class="muted" style="margin-top:8px">Compassion · Respect · Inclusion · Dignity</p>
+              <div style="font-weight:700">What We Stand For</div>
+              <p class="muted" style="margin-top:8px">Compassion · Opportunity · Collaboration · Trust</p>
             </div>
           </div>
         </div>
@@ -110,15 +113,15 @@
 
         <div class="grid-3" role="list">
           <article class="card" role="listitem">
-            <img class="img" src="https://images.unsplash.com/photo-1549488344-6a9b8f5b6a8a?q=80&w=1200&auto=format&fit=crop" alt="Street education">
+            <img class="img" src="./asesst/img1.jpeg" alt="Street education" sizes="auto">
             <div class="body">
               <h4>Street Education</h4>
-              <p>Short lessons on literacy, numeracy, hygiene and life skills delivered where children are.</p>
+              <p>Lessons on literacy, numeracy, hygiene and life skills delivered on streets for beggar children</p>
             </div>
           </article>
 
           <article class="card" role="listitem">
-            <img class="img" src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?q=80&w=1200&auto=format&fit=crop" alt="School admissions">
+            <img class="img" src="./asesst/child education.png" alt="School admissions" sizes="auto">
             <div class="body">
               <h4>School Admissions</h4>
               <p>We help with paperwork, enrollment, and follow-ups so children can attend formal schools.</p>
@@ -126,10 +129,10 @@
           </article>
 
           <article class="card" role="listitem">
-            <img class="img" src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?q=80&w=1200&auto=format&fit=crop" alt="Mind Map Café">
+            <img class="img" src="./asesst/mind park.jpg" alt="Mind Park Café" width="auto">
             <div class="body">
-              <h4>Mind Map Café</h4>
-              <p>A community hub that supports mentally challenged individuals through activities, skills training and supported roles.</p>
+              <h4>Mind Park Cafe - Documentary</h4>
+              <p>Our documentary captures the story of a community Cafe that supports mentally challenged individuals through care, training, and a café that helps sustain and empower them.</p>
             </div>
           </article>
         </div>
@@ -146,12 +149,12 @@
 
         <div class="moving-gallery">
         <div class="gallery-track">
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?q=80&w=1000&auto=format&fit=crop" alt="Street Education"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?q=80&w=1000&auto=format&fit=crop" alt="Children Learning"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1549488344-6a9b8f5b6a8a?q=80&w=1000&auto=format&fit=crop" alt="Volunteers Teaching"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=1000&auto=format&fit=crop" alt="Community Event"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1509099836639-18ba1795216d?q=80&w=1000&auto=format&fit=crop" alt="Mind Map Café"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1526628953301-3e589a6a8b74?q=80&w=1000&auto=format&fit=crop" alt="Hope & Smiles"></div>
+            <div class="gallery-item"><img src="./asesst/img1.jpeg" alt="Street Education"></div>
+            <div class="gallery-item"><img src="./asesst/img4.jpeg" alt="Community Event"></div>
+            <div class="gallery-item"><img src="./asesst/teaching.png" alt="Volunteers Teaching"></div>
+            <div class="gallery-item"><img src="./asesst/img3.jpeg" alt="Avabodh Foundation Goal"></div>
+            <div class="gallery-item"><img src="./asesst/img7.jpg" alt="Cloth Donation"></div>
+            <div class="gallery-item"><img src="./asesst/img5.jpeg" alt="Hope & Smiles"></div>
         </div>
         </div>
     </div>
@@ -169,18 +172,18 @@
         <!-- Left: Contact Info -->
         <div class="contact-card" style="background:white;padding:28px;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,0.08);">
             <h3 style="margin-bottom:12px;color:#222;">Contact Details</h3>
-            <p class="muted" style="margin-bottom:14px;">Email: <a href="mailto:info@avabodh.org">info@avabodh.org</a><br>
-            Phone: +91 98765 43210</p>
+            <p class="muted" style="margin-bottom:14px;">Email: <a href="mailto:foundationavabodh@gmail.com">foundationavabodh@gmail.com</a><br>
+            Phone: +91 8600290844</p>
 
             <div style="margin-top:18px;">
             <h4 style="margin-bottom:8px;color:#222;">Donate</h4>
-            <p class="muted" style="margin-bottom:12px;">Your support helps us educate children and bring hope to families in need.</p>
+            <p class="muted" style="margin-bottom:12px;">Your proactive engagement on these platforms not only supports the Foundation’s outreach efforts but also contributes to a culture of gratitude, collaboration, and social awareness.</p>
             <a class="btn btn-primary" id="donate" href="#donate">Donate Now</a>
             </div>
 
             <div style="margin-top:24px;">
             <h4 style="margin-bottom:6px;color:#222;">Address</h4>
-            <p class="muted">City, State — India</p>
+            <p class="muted">Nagpur, Maharasthra, India</p>
             </div>
         </div>
 
@@ -207,16 +210,17 @@
     </main>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="wrap">
-      <div style="display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap">
+  <footer style="background-color: rgb(3, 203, 3, 0.5); font-size: large;">
+    <div class="wrap" style="color: black;">
+      <div style="display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap; color: black;">
         <div style="font-weight:700">Avabodh Foundation</div>
-        <div style="color:var(--muted)">© <span id="yr"></span> — Building futures through education</div>
+        <div style="color:var(--muted)">© <span id="yr"></span>A step towards better World..!!</div>
       </div>
 
       <div style="margin-top:12px;color:var(--muted)">Follow: 
-        <a href="https://www.instagram.com/avabodh_foundation/" target="_blank" rel="noopener">Instagram</a> ·
-        <a href="https://www.linkedin.com/company/avabodh-foundationn/posts/?feedView=all" target="_blank" rel="noopener">LinkedIn</a>
+        <a style="color: rgb(3, 0, 27);" href="https://www.instagram.com/avabodh_foundation/" target="_blank" rel="noopener">Instagram</a> ·
+        <a style="color: rgb(3, 0, 27);" href="https://www.linkedin.com/company/avabodh-foundationn/posts/?feedView=all" target="_blank" rel="noopener">LinkedIn</a> ·
+        <a style="color: rgb(3, 0, 27);" href="https://www.youtube.com/@avabodhFoundation" target="_blank" rel="noopener">YouTube</a>
       </div>
     </div>
   </footer>
